--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello-World</title>
+    <title>Munchers</title>
     <link href = "style.css" rel="stylesheet" type = "text/css"/>
 </head>
 <body>
+    <nav>
+        <button><a href = "fish.html">Press Me!</a></button>
+    </nav>
     <div>
         <h1>My Hamster Munchers</h1>
         <h2>His untimely death</h2>
     </div>
-    <a href = "fish.html">hi</a>
     <br>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Rerum recusandae iste officiis animi. 
-        Repellat quas in incidunt voluptatem iure voluptate blanditiis, 
-        consequuntur eos explicabo alias recusandae nostrum a aliquam debitis!
-    </p>
-    <button>Press Me!</button>
-    <input type = "text">
-    <input type = "date" name = "" id = "">
-    <input type = "color" name = "" id = "">
-    <script src = "script.js"></script>
+    <div class="candy">
+        <h2>My list of Candy</h2>
+        <h3>Snickers</h3>
+        <p> Munchers Reasoning: I only had one candy in my life it was Snickers, it killed me</p>
+    </div>
+    <h1>Cute Hamster pics</h1>
+    <div>
+        <img src="" alt="Jeremy">
+        <img src="" alt="Martin">
+        <img src="" alt="Tina">
+        <img src="" alt="Samantha">
+    </div>
 </body>
 </html>
