--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </div>
     <h1>Cute Hamster pics</h1>
     <div>
-        <img src="" alt="Jeremy">
-        <img src="" alt="Martin">
-        <img src="" alt="Tina">
-        <img src="" alt="Samantha">
+        <img src="Jeremy.jpg" alt="Jeremy">
+        <img src="Martin.jpg" alt="Martin">
+        <img src="Tina.jpg" alt="Tina">
+        <img src="Samantha.jpg" alt="Samantha">
     </div>
 </body>
 </html>
