--- a/index.html
+++ b/index.html
@@ -8,24 +8,63 @@
 </head>
 <body>
     <nav>
-        <button><a href = "fish.html">Press Me!</a></button>
+        <button><a href = "fish.html">Go to FAC News</a></button>
+
     </nav>
     <div>
-        <h1>My Hamster Munchers</h1>
-        <h2>His untimely death</h2>
+        <h1>Gerbil Association of Commerce(GAC) News</h1>
+        <h2>Latest of January</h2>
     </div>
     <br>
-    <div class="candy">
-        <h2>My list of Candy</h2>
-        <h3>Snickers</h3>
-        <p> Munchers Reasoning: I only had one candy in my life it was Snickers, it killed me</p>
-    </div>
-    <h1>Cute Hamster pics</h1>
+    <h1>Gerbil Association of Commerce(GAC)</h1>
     <div>
-        <img src="Jeremy.jpg" alt="Jeremy">
-        <img src="Martin.jpg" alt="Martin">
-        <img src="Tina.jpg" alt="Tina">
-        <img src="Samantha.jpg" alt="Samantha">
+        <div id="Jeremy" class = "description">
+            <h2 class = "name">Jeremy</h2>
+            <h4>CEO</h4>
+            <div class = "cardtext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
+            </div>
+            <img src="Jeremy.jpg" alt="Jeremy">
+        </div>
+        <div id = "Martin" class = "description">
+            <h2 class = "name">Martin</h2>
+            <h4>Manager</h4>
+            <div class = "cardtext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
+            </div>
+            <img src="Martin.jpg" alt="Martin">
+        </div>
+        <div id = "Tina" class = "description">
+            <h2 class = "name">Tina</h2>
+            <h4>Karen</h4>
+            <div class = "cardtext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
+            </div>
+            <img src="Tina.jpg" alt="Tina" height = "212">
+        </div>
+        <div id="Samantha" class = "description">
+            <h2 class = "name">Samantha</h2>
+            <h4>Customer Relationships</h4>
+            <div class = "cardtext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
+            </div>
+            <img src="Samantha.jpg" alt="Samantha" height = "212">
+        </div>
+        
+    </div>
+    <div>
+        <h1>Tribute to Munchers</h1>
+        <h2>The fallen soldier</h2>
+        <img src = "Munchers.jpg" alt = "munchers tribute">
+        <div class="candy">
+            <h2>Munchers list of Candy</h2>
+            <h3>Snickers</h3>
+            <p class = "fittedtext"> Munchers Reasoning: I only had one candy in my life it was Snickers, it killed me</p>
+        </div>
+    </div>
+    <div>
+        <h3>Credits</h3>
+        
     </div>
 </body>
 </html>
