--- a/fish.html
+++ b/fish.html
@@ -7,9 +7,9 @@
     <link href = "style.css" rel="stylesheet" type = "text/css"/>
 </head>
 <body>
+    <nav><a href = "index.html">Return to homepage</a></nav>
     <h1>My friend</h1>
     <h2>You have just purchased</h2>
     <h1>10 fish</h1>
-    <a href = "index.html">Return to homepage</a>
 </body>
 </html>
