--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class = "cardtext">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
             </div>
-            <img src="Jeremy.jpg" alt="Jeremy">
+            <img src="images/Jeremy.jpg" alt="Jeremy">
         </div>
         <div id = "Martin" class = "description">
             <h2 class = "name">Martin</h2>
@@ -32,7 +32,7 @@
             <div class = "cardtext">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
             </div>
-            <img src="Martin.jpg" alt="Martin">
+            <img src="images/Martin.jpg" alt="Martin">
         </div>
         <div id = "Tina" class = "description">
             <h2 class = "name">Tina</h2>
@@ -40,7 +40,7 @@
             <div class = "cardtext">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
             </div>
-            <img src="Tina.jpg" alt="Tina" height = "212">
+            <img src="images/Tina.jpg" alt="Tina" height = "212">
         </div>
         <div id="Samantha" class = "description">
             <h2 class = "name">Samantha</h2>
@@ -48,23 +48,111 @@
             <div class = "cardtext">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
             </div>
-            <img src="Samantha.jpg" alt="Samantha" height = "212">
+            <img src="images/Samantha.jpg" alt="Samantha" height = "212">
         </div>
         
     </div>
     <div>
         <h1>Tribute to Munchers</h1>
         <h2>The fallen soldier</h2>
-        <img src = "Munchers.jpg" alt = "munchers tribute">
+        <img src = "images/Munchers.jpg" alt = "munchers tribute">
         <div class="candy">
-            <h2>Munchers list of Candy</h2>
-            <h3>Snickers</h3>
-            <p class = "fittedtext"> Munchers Reasoning: I only had one candy in my life it was Snickers, it killed me</p>
+            <h2>Munchers Wish List</h2>
+            <h3>Candy</h3>
+            <h3>Gold Medal</h3>
+            <h3>Selfie with Cristiano McDonald</h3>
+            <p class = "fittedtext"> Munchers died because he got pushed off a bridge by the Kiwi Bird Kiki. She is now our primary target in this animal war</p>
         </div>
+    </div>
+    <h1>War Against the Kiwi Birds</h1>
+    <img src="images/Map_of_Animal_Countries.png" id = "map">
+    <div class = "description" id = "Kiwi">
+        <h2 class = "name">Kiki</h2>
+        <h4>Main Target</h4>
+        <div class = "cardtext">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quis cumque natus.</p>
+        </div>
+        <img src="images/kiwibird.png" alt="Main Target #1" height = "212">
+    </div>
+    <div class = "description">
+        <h2 class = "name">George Clowney</h2>
+        <h4>Army Commander</h4>
+        <div class = "cardtext">
+            <p>WE MUST TAKE HIM DOWN TO CONQUER ALLL OF KIWI BIRD KINGDOM AND AVENGE OUR MUNCHERS BECAUSE HE IS OUR GOAT AND NO ONE WILL EVER MESS WITH THE GERBIL ASSOCIATION OF COMMERCE EVER AGAIN TONIGHT WE UNITE UNDER THE POWER OF MUNCHERS AND ONCE AND FOR ALL RID THE WORLD OF DISGUSTING DISGRACEFUL COWARDLY KIKI BIRDS</p>
+        </div>
+        <img src="images/GeorgeClowney.png" alt="Main Target #2" height = "212">
+    </div>
+    <div>
+        <h1>Tribute to all the Fallen Hamsters</h1>
+        <h2>In the Recent War</h2>
+    </div>
+    <div id = "hover">
+    <div class = "description" >
+        <h2 class = "name">Lieutenant Malcom</h2>
+        <h4>Lieutenant</h4>
+        <div class = "cardtext">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quis cumque natus.</p>
+        </div>
+        <img src="images/Lietenant Malcom.png" alt="Malcom" height = "212">
+    </div>
+    <div class = "description">
+        <h2 class = "name">James</h2>
+        <h4>Soldier</h4>
+        <div class = "cardtext">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quis cumque natus.</p>
+        </div>
+        <img src="images/james.png" alt="James" height = "212">
+    </div>
+    <div class = "description">
+        <h2 class = "name">Jacob</h2>
+        <h4>Soldier Class 2</h4>
+        <div class = "cardtext">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quis cumque natus.</p>
+        </div>
+        <img src="images/Jacob.png" alt="Jacob" height = "212">
+    </div>
+    </div>
+    <div id = "ad">
+        <h2>Join the Hamster Army</h2>
+        <p> We need people to join the army for a territorial conquest.</p>
+        <a id = "enroll" href = "enroll.html">Enroll Here</a>
     </div>
     <div>
         <h3>Credits</h3>
-        
+    </div>
+    <div>
+        <div class = "description">
+            <h2 class = "name">Johnaton</h2>
+            <h4>Head Manager</h4>
+            <div class = "cardtext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
+            </div>
+            <img src="images/Johnaton.jpg" alt="Johnaton" height = "212">
+        </div>
+        <div class = "description">
+            <h2 class = "name">Marley</h2>
+            <h4>Publisher</h4>
+            <div class = "cardtext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
+            </div>
+            <img src="images/Marley.jpg" alt="Marley">
+        </div>
+        <div class = "description">
+            <h2 class = "name">Breyson</h2>
+            <h4>Writer</h4>
+            <div class = "cardtext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
+            </div>
+            <img src="images/breyson.jpg" alt="Breyson" height = "212">
+        </div>
+        <div class = "description">
+            <h2 class = "name">Greyson</h2>
+            <h4>Editor</h4>
+            <div class = "cardtext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quibusdam animi praesentium dignissimos nihil adipisci aperiam deleniti nam, explicabo veniam suscipit fuga cupiditate modi quisquam dolorum mollitia harum esse quasi officia magnam laudantium ad, ducimus quas! Nostrum doloribus, consequuntur molestias dicta, expedita rem dignissimos, neque enim soluta tenetur aut! Ipsa?</p>
+            </div>
+            <img src="images/Greyson.jpg" alt="Greyson" height = "212">
+        </div>
     </div>
 </body>
 </html>
